video size on mobile fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,7 +57,7 @@
 }
 @media screen and (min-width:0px) {
     .homeHero{
-        height: 65vh;
+        height: 55vh;
     }  
 }
 @media screen and (min-width:768px) {
